<resources>
    <string name="app_name">InstaBattle</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- CreateBattle strings -->
    <string name="newBattle">New Battle</string>
    <string name="newBattleTitle">Battle Name</string>
    <string name="newBattleDescription">Battle Description</string>
    <string name="newBattleRadius">Battle Radius (in meters)</string>
    <string name="newBattlePhoto">Your Photo</string>
    <string name="createBattle">Create Battle</string>

    <!-- activity_battle -->
    <string name="participate">Participate</string>
    <string name="vote">Vote</string>

    <!-- activity_battle_list -->
    <string name="near_battles">Near Battles</string>

    <!-- activity_camera -->
    <string name="new_participation_in">New participation in</string>
    <string name="take_photo">Take photo</string>

    <!-- activity_create_battle -->
    <string name="first_photo">First photo in battle</string>

    <!-- activity_login -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logo">Instabattle logo</string>

    <!-- activity_menu -->
    <string name="battles">Battles</string>
    <string name="rating">Rating</string>
    <string name="my_profile">My Profile</string>
    <string name="map">Map</string>

    <!-- activity_my_profile -->
    <string name="log_out">Log Out</string>

    <!-- activity_photo_edit -->
    <string name="editable_photo">Editable photo</string>
    <string name="take_new_photo">Take a new one</string>
    <string name="use_this_photo">Use this photo</string>

    <!-- activity_vote -->
    <string name="first_photo_description">First photo</string>
    <string name="second_photo_description">Second photo</string>

    <!-- battle_list_item -->
    <string name="view_battle">View</string>
    <string name="view_on_map">On map</string>

    <!-- fragment_voting_end_dialog and user_entry_list_item-->
    <string name="vote_again">Vote again</string>
    <string name="back_to_battle">Back</string>
    <string name="takePhoto">Take photo</string>
    <string name="my_participations">My participations</string>

    <!-- user_entry_list_item -->
    <string name="user_entry_list_image_description">A photo of user</string>
    <string name="posted_on">Posted on:</string>
    <string name="battle_list_image_description">Battle image</string>
    <string name="view">View</string>
    <string name="on_map">On map</string>
</resources>
