<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="me.instabattle.app.activities.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="#ffffff">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/instabattle_logo"
            android:contentDescription="@string/logo"/>
        <EditText
            android:id="@+id/loginInput"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:layout_margin="7dp"
            />
        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="7dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/sign_in"
                android:onClick="onSigninClick"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/sign_up"
                android:onClick="onSignupClick"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
