<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_camera"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.instabattle.app.activities.PhotoEditActivity">

    <TextView
        android:id="@+id/editPhotoBattleTitleTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_participation_in"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/editPhotoBattleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editPhotoBattleTitleTop"/>
    <RelativeLayout
        android:id="@+id/participationButtonsLayout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <Button
                android:id="@+id/takeNewPictureBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/take_new_photo"
                android:onClick="takeNewPhoto"/>
            <Button
                android:id="@+id/usePictureBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/use_this_photo"
                android:onClick="useThisPhoto"/>
        </LinearLayout>
    </RelativeLayout>
    <ImageView
        android:id="@+id/currentPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/editable_photo"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editPhotoBattleTitle"
        android:layout_above="@id/participationButtonsLayout"/>
</RelativeLayout>