<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="me.instabattle.app.activities.MenuActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/instabattle_logo"
        app:layout_constraintBottom_toTopOf="@+id/mapBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/myProfileBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:onClick="onButtonClick"
        android:text="@string/my_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/battlesBtn" />

    <Button
        android:id="@+id/battlesBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:onClick="onButtonClick"
        android:text="@string/battles"
        app:layout_constraintBottom_toTopOf="@+id/myProfileBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapBtn" />

    <Button
        android:id="@+id/mapBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:onClick="onButtonClick"
        android:text="@string/map"
        app:layout_constraintBottom_toTopOf="@+id/battlesBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>
