<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_voting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.instabattle.app.activities.VoteActivity">


    <ImageView
        android:id="@+id/firstImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/first_photo_description"
        app:layout_constraintBottom_toTopOf="@+id/voteSecondBtn"
        app:layout_constraintEnd_toStartOf="@+id/voteFirstBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/voteFirstBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:onClick="vote"
        android:text="@string/vote"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/secondImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstImage"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/voteSecondBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="vote"
        android:text="@string/vote"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/secondImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstImage" />

    <ImageView
        android:id="@+id/secondImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/second_photo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/voteSecondBtn"
        app:layout_constraintTop_toBottomOf="@+id/voteFirstBtn" />


</android.support.constraint.ConstraintLayout>
